time slots created

--- a/index.html
+++ b/index.html
@@ -37,6 +37,55 @@
           <i class="fas fa-save"></i>
         </button>
       </div>
+      <div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">1000</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div><div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">1100</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div><div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">1200</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div><div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">1300</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div><div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">1400</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div><div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">1500</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div><div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">1600</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div><div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">1700</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
