--- a/index.html
+++ b/index.html
@@ -27,68 +27,78 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
       <div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">0900</div>
-        <textarea class="col-md-10 description"></textarea>
+        <div id="timeblock1" class="col-md-1 9hour hour">09:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
+        <button  id="saveme" class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div> 
+      <div id="hour-9" class="row time-block">
+        <div id="timeblock2" class="col-md-1 10hour hour">10:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
+        <button id="saveme"class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div id="hour-9" class="row time-block">
+        <div id="timeblock3" class="col-md-1 11hour hour">11:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">1000</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div><div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">1100</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div><div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">1200</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div><div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">1300</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div><div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">1400</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div><div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">1500</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div><div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">1600</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div><div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">1700</div>
-        <textarea class="col-md-10 description"></textarea>
+        <div id="timeblock4" class="col-md-1 12hour hour">12:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
+      <div id="hour-9" class="row time-block">
+        <div id="timeblock5" class="col-md-1 13hour hour">13:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div id="hour-9" class="row time-block">
+        <div id="timeblock6" class="col-md-1 14hour hour">14:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div id="hour-9" class="row time-block">
+        <div id="timeblock7" class="col-md-1 15hour hour">15:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div id="hour-9" class="row time-block">
+        <div id="timeblock8"class="col-md-1 16hour hour">16:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+      <div id="hour-9" class="row time-block">
+        <div id="timeblock9"class="col-md-1 17hour hour">17:00</div>
+        <textarea id="see" class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div> 
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
