--- a/index.html
+++ b/index.html
@@ -45,63 +45,63 @@
       <!-- Timeblocks go here -->
       <div id="hour-9" class="row time-block">
         <div id="timeblock1" class="col-md-1 9hour hour">09:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="09:00" class="col-md-10 description"></textarea>
         <button  id="saveme" class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div> 
       <div id="hour-9" class="row time-block">
         <div id="timeblock2" class="col-md-1 10hour hour">10:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="10:00" class="col-md-10 description"></textarea>
         <button id="saveme"class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div id="hour-9" class="row time-block">
         <div id="timeblock3" class="col-md-1 11hour hour">11:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="11:00" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div id="hour-9" class="row time-block">
         <div id="timeblock4" class="col-md-1 12hour hour">12:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="12:00" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div id="hour-9" class="row time-block">
         <div id="timeblock5" class="col-md-1 13hour hour">13:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="13:00" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div id="hour-9" class="row time-block">
         <div id="timeblock6" class="col-md-1 14hour hour">14:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="14:00" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div id="hour-9" class="row time-block">
         <div id="timeblock7" class="col-md-1 15hour hour">15:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="15:00" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div id="hour-9" class="row time-block">
         <div id="timeblock8"class="col-md-1 16hour hour">16:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="16:00" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div id="hour-9" class="row time-block">
         <div id="timeblock9"class="col-md-1 17hour hour">17:00</div>
-        <textarea id="see" class="col-md-10 description"></textarea>
+        <textarea id="17:00" class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
