fixed local storage

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
       <div id="hour-9" class="row time-block">
         <div id="timeblock1" class="col-md-1 9hour hour">09:00</div>
         <textarea id="09:00" class="col-md-10 description"></textarea>
-        <button  id="saveme" class="btn saveBtn col-md-1">
+        <button  class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div> 
       <div id="hour-9" class="row time-block">
         <div id="timeblock2" class="col-md-1 10hour hour">10:00</div>
         <textarea id="10:00" class="col-md-10 description"></textarea>
-        <button id="saveme"class="btn saveBtn col-md-1">
+        <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
